Add debug option to IPMI add-on

--- a/ipmi/config.json
+++ b/ipmi/config.json
@@ -14,10 +14,12 @@
   ],
   "options": {
     "interval": 5,
-    "discovery_prefix": "homeassistant"
+    "discovery_prefix": "homeassistant",
+    "debug": false
   },
   "schema": {
     "interval": "int(1,)",
-    "discovery_prefix": "str"
+    "discovery_prefix": "str",
+    "debug": "bool"
   }
 }
