--- a/lidarr/config.json
+++ b/lidarr/config.json
@@ -4,6 +4,7 @@
   "slug": "lidarr",
   "description": "Lidarr is a music collection manager for Usenet and BitTorrent users.",
   "url": "https://github.com/evilmarty/hassio-addons/tree/master/lidarr",
+  "image": "evilmarty/hassio-lidarr",
   "arch": ["amd64", "aarch64", "armhf"],
   "startup": "application",
   "init": false,
