Fix supervisor warnings for non-string env vars in configs

--- a/couchpotato/config.json
+++ b/couchpotato/config.json
@@ -19,8 +19,8 @@
   },
   "map": ["share:rw", "ssl:ro", "media:rw"],
   "environment": {
-    "PUID": 0,
-    "PGID": 0
+    "PUID": "0",
+    "PGID": "0"
   },
   "options": {},
   "schema": {}
