--- a/sabnzbd/config.json
+++ b/sabnzbd/config.json
@@ -30,8 +30,8 @@
     "media:rw"
   ],
   "environment": {
-    "PUID": 0,
-    "PGID": 0
+    "PUID": "0",
+    "PGID": "0"
   },
   "options": {},
   "schema": {}
