--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -48,32 +48,41 @@ jobs:
           EXT_VERSION=$(echo ${EXT_RELEASE} | awk -F'-ls' '{print $1}')
           echo "::set-output name=version::${EXT_VERSION}"
 
-      - name: Push to Docker Hub
+      - name: Set up QEMU
         if: steps.config.outputs.version != steps.image.outputs.version || github.event_name == 'workflow_dispatch'
-        uses: docker/build-push-action@v1
+        uses: docker/setup-qemu-action@v1
+
+      - name: Set up Docker Buildx
+        if: steps.config.outputs.version != steps.image.outputs.version || github.event_name == 'workflow_dispatch'
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to DockerHub
+        if: steps.config.outputs.version != steps.image.outputs.version || github.event_name == 'workflow_dispatch'
+        uses: docker/login-action@v1
         with:
-          path: ${{ matrix.addon }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ steps.config.outputs.image }}
-          tags: ${{ steps.image.outputs.version }}
-          build_args:
-          add_git_labels: true
-          push: true
 
-      - name: Push to Github Container Registry
+      - name: Login to GHCR
         if: steps.config.outputs.version != steps.image.outputs.version || github.event_name == 'workflow_dispatch'
-        uses: docker/build-push-action@v1
+        uses: docker/login-action@v1
         with:
-          path: ${{ matrix.addon }}
+          registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          repository: ${{ steps.config.outputs.image }}
-          registry: ghcr.io
-          tags: ${{ steps.image.outputs.version }}
-          build_args:
-          add_git_labels: true
+
+      - name: Build and push
+        if: steps.config.outputs.version != steps.image.outputs.version || github.event_name == 'workflow_dispatch'
+        uses: docker/build-push-action@v2
+        with:
+          context: ${{ matrix.addon }}
           push: true
+          tags: |
+            ${{ steps.config.outputs.image }}:${{ steps.image.outputs.version }}
+            ghcr.io/${{ steps.config.outputs.image }}:${{ steps.image.outputs.version }}
+          labels: |
+            org.opencontainers.image.source=https://github.com/${{ github.repository }}
+            org.opencontainers.image.revision=${{ github.sha }}
 
       - env:
           IMAGE_VERSION: ${{ steps.image.outputs.version }}
