--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -29,16 +29,14 @@ jobs:
       - id: image
         name: Fetch image version
         run: |
-          image_tag=$(awk '{if ($1 == "FROM") {print $2}}' ${{ matrix.addon }}/Dockerfile)
-          image=$(echo ${image_tag} | awk -F':' '{print $1}')
-          tag=$(echo ${image_tag} | awk -F':' '{print $2}')
-          token=$(curl -sG --data-urlencode "scope=repository:${image_tag}:pull" \
+          image=$(jq -r '.image | split("/") | .[-2:] | join("/")' ${{ matrx.addon }}/config.json)
+          token=$(curl -sG --data-urlencode "scope=repository:${image}:pull" \
             'https://ghcr.io/token' \
             | jq -r '.token')
           digest=$(curl -s \
             --header 'Accept: application/vnd.docker.distribution.manifest.v2+json' \
             --header "Authorization: Bearer ${token}" \
-            "https://ghcr.io/v2/${image}/manifests/${tag}" \
+            "https://ghcr.io/v2/${image}/manifests/latest" \
             | jq -r '.config.digest')
           EXT_VERSION=$(curl -sL \
             --header "Authorization: Bearer ${token}" \
@@ -77,7 +75,6 @@ jobs:
           push: true
           tags: |
             ${{ steps.config.outputs.image }}:${{ steps.image.outputs.version }}
-            ghcr.io/${{ steps.config.outputs.image }}:${{ steps.image.outputs.version }}
           labels: |
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
