--- a/radarr/config.json
+++ b/radarr/config.json
@@ -4,7 +4,7 @@
   "slug": "radarr",
   "description": "A fork of Sonarr to work with movies à la Couchpotato.",
   "url": "https://github.com/evilmarty/hassio-addons/tree/master/radarr",
-  "image": "evilmarty/hassio-radarr",
+  "image": "ghcr.io/evilmarty/hassio-radarr",
   "arch": [
     "amd64",
     "aarch64",
