Fix eufy-security addon

--- a/eufy-security/Dockerfile
+++ b/eufy-security/Dockerfile
@@ -1,2 +1,4 @@
 FROM ghcr.io/evilmarty/eufy-security-mqtt:latest
-CMD [ "--config", "/data/options.json" ]
+COPY rootfs /
+ENTRYPOINT ["node"]
+CMD ["src/addon.js"]
