Update eufy-security addon with latest changes to eufy-security-mqtt

--- a/eufy-security/Dockerfile
+++ b/eufy-security/Dockerfile
@@ -1,4 +1,2 @@
 FROM ghcr.io/evilmarty/eufy-security-mqtt:latest
-COPY rootfs /
-ENTRYPOINT ["node"]
-CMD ["src/addon.js"]
+CMD ["--hassio", "--config", "/data/options.json"]
