Add discovery option to eufy-security addon

--- a/eufy-security/config.json
+++ b/eufy-security/config.json
@@ -16,6 +16,7 @@
   "services": [
     "mqtt:need"
   ],
+  "discovery": ["mqtt"],
   "panel_icon": "mdi:selection-ellipse",
   "options": {
     "hassTopicRoot": "homeassistant",
