--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -13,9 +13,9 @@ jobs:
       matrix:
         addon: [ sabnzbd, sonarr, radarr, lidarr, eufy-security ]
     steps:
-      - uses: actions/checkout@v2.3.3
+      - uses: actions/checkout@v2
         with:
-          ref: ${{ github.head_ref }}
+          ref: ${{ github.ref_name }}
 
       - id: config
         name: Extract config version
