--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -102,7 +102,7 @@ jobs:
         run: |
           git stash
           git pull --rebase --depth=1
-          git stash pop
+          git stash pop || true
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
