Reorder git pull before making changes in workflow

--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -91,18 +91,15 @@ jobs:
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
 
+      - name: Pull latest changes (just in case)
+        run: git pull --rebase --depth=1
+
       - name: Update config
         env:
           IMAGE_VERSION: ${{ steps.image.outputs.version }}
         run: |
           jq --arg version "$IMAGE_VERSION" '. + {version: $version}' ${{ matrix.addon }}/config.json > ${{ matrix.addon }}/updated-config.json
           mv -f ${{ matrix.addon }}/updated-config.json ${{ matrix.addon }}/config.json
-
-      - name: Pull latest changes (just in case)
-        run: |
-          git stash
-          git pull --rebase --depth=1
-          git stash pop || true
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
