--- a/.github/workflows/build-update.yml
+++ b/.github/workflows/build-update.yml
@@ -91,8 +91,9 @@ jobs:
             org.opencontainers.image.source=https://github.com/${{ github.repository }}
             org.opencontainers.image.revision=${{ github.sha }}
 
-      - name: Pull latest changes (just in case)
-        run: git pull --rebase --depth=1
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 2
 
       - name: Update config
         env:
