--- a/sonarr/config.json
+++ b/sonarr/config.json
@@ -16,12 +16,8 @@
   "services": [],
   "webui": "http://[HOST]:[PORT:8989]",
   "panel_icon": "mdi:selection-ellipse",
-  "ports": {
-    "8989/tcp": 8989
-  },
-  "ports_description": {
-    "8989/tcp": "The port for the Sonarr webinterface"
-  },
+  "ingress": true,
+  "ingress_stream": true,
   "map": [
     "share:rw",
     "ssl:ro",
@@ -31,6 +27,12 @@
     "PUID": "0",
     "PGID": "0"
   },
-  "options": {},
-  "schema": {}
+  "options": {
+    "log_level": "error",
+    "api_key": null
+  },
+  "schema": {
+    "log_level": "list(info|warning|error|fatal|debug|trace)",
+    "api_key": "str?"
+  }
 }
