--- a/sabnzbd/test.yaml
+++ b/sabnzbd/test.yaml
@@ -1,20 +1,26 @@
 schemaVersion: "2.0.0"
 
 fileExistenceTests:
+  - name: bashio (linked)
+    path: /usr/bin/bashio
+    shouldExist: true
+    permissions: "Lrwxrwxrwx"
+    uid: 0
+    gid: 0
+  - name: bashio
+    path: /usr/lib/bashio/bashio
+    shouldExist: true
+    permissions: "-rwxrwxr-x"
+    uid: 0
+    gid: 0
+  - name: tempio
+    path: /usr/bin/tempio
+    shouldExist: true
+    permissions: "-rwxr-xr-x"
+    uid: 0
+    gid: 0
   - name: SABnzbd.py
     path: /app/sabnzbd/SABnzbd.py
-    shouldExist: true
-    permissions: "-rwxr-xr-x"
-    uid: 0
-    gid: 0
-  - name: SABnzbd run
-    path: /etc/services.d/sabnzbd/run
-    shouldExist: true
-    permissions: "-rwxr-xr-x"
-    uid: 0
-    gid: 0
-  - name: Nginx run
-    path: /etc/services.d/nginx/run
     shouldExist: true
     permissions: "-rwxr-xr-x"
     uid: 0
@@ -24,17 +30,12 @@ fileContentTests:
   - name: SABnzbd run
     path: /etc/services.d/sabnzbd/run
     expectedContents:
-      - "s6-setuidgid abc python3 /app/sabnzbd/SABnzbd\\.py"
-      - "--server 0\\.0\\.0\\.0:8080"
+      - "s6-setuidgid abc python3 /app/sabnzbd/SABnzbd.py"
+      - "--server 0.0.0.0:8080"
       - "--config-file /data .*"
       - "--browser 0"
       - "--disable-file-log"
       - "--console"
-  - name: Nginx run
-    path: /etc/services.d/nginx/run
-    expectedContents:
-      - "bashio::net\\.wait_for 8080 localhost"
-      - "exec nginx"
 
 commandTests:
   - name: Python 3
@@ -42,38 +43,3 @@ commandTests:
     args: [--version]
     expectedOutput: ["Python 3.9."]
     exitCode: 0
-  - name: Bashio
-    command: bashio
-    expectedOutput: []
-    expectedError:
-      - "source: filename argument required"
-      - "source: usage: source filename \\[arguments\\]"
-    exitCode: 2
-  - name: Tempio
-    command: tempio
-    expectedOutput: []
-    expectedError:
-      - "Missing template argument"
-    exitCode: 1
-  - name: Jq
-    command: jq
-    args: [--version]
-    expectedOutput:
-      - "jq-master-v3\\.15\\."
-    exitCode: 0
-  - name: Nginx
-    command: nginx
-    args: [-v]
-    expectedOutput: []
-    expectedError:
-      - "nginx version: nginx/1\\.20\\."
-    exitCode: 0
-
-metadataTest:
-  entrypoint: [/init]
-  cmd: []
-  volumes:
-    - /data
-    - /media
-    - /share
-    - /ssl
